<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DUT_Rexroth_FU_PD_IN" Id="{cb47e2dc-95b9-493d-95f8-5b492df76105}">
    <Declaration><![CDATA[TYPE DUT_Rexroth_FU_PD_IN :
STRUCT
	PD_1_STATUSWORT		:WORD;	(* Ausgangsprozessdatenwort 1 *)
	PD_2_IST_DREHZAHL	:WORD;	(* Ausgangsprozessdatenwort 2 *)
	PD_3_Status			:WORD;	(* Ausgangsprozessdatenwort 3 *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>